--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeN6_MUIjF1pej1SHkTjX5ev-0WF4eVNpSzilJMQ8QSImjXeXWW1ucegHbr3c-JZg3Lfo&usqp=CAU" type="image/x-icon">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home Page</title>
-</head>
-
-<body>
-  <p>~ Link</p>
-  <p>Main Link :- https://jeelsardhara.onrender.com/</p>
-  <br>
-  <p>~ Router</p>
-  <p>Router Link :- https://jeelsardhara.onrender.com/Api/</p>
-  <br>
-  <p>~ Methode</p>
-  <p>post :- https://jeelsardhara.onrender.com/Api/Register</p>
-  <p>get :- https://jeelsardhara.onrender.com/Api/Login</p>
-  <p>post :- https://jeelsardhara.onrender.com/Api/OtpSent</p>
-  <p>post :- https://jeelsardhara.onrender.com/Api/OtpVerify</p>
-  <p>post :- https://jeelsardhara.onrender.com/Api/PassForgot</p>
-  <br>
-  <p>~ Require</p>
-  <p>Register :- Name & Email & Password</p>
-  <p>Login :- Email & Password</p>
-  <p>OtpSent :- Email</p>
-  <p>OtpVerify :- Email & Otp</p>
-  <p>PassForgot :- Email & Password & confirmPassword</p>
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeN6_MUIjF1pej1SHkTjX5ev-0WF4eVNpSzilJMQ8QSImjXeXWW1ucegHbr3c-JZg3Lfo&usqp=CAU" type="image/x-icon"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Home Page</title> <style> * { color: white; background-color: black; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; } </style> </head> <body> <p>~ Link</p> <p>Main Link :- https://jeelsardhara.onrender.com/</p> <br> <p>~ Router</p> <p>Router Link :- https://jeelsardhara.onrender.com/Api/</p> <br> <p>~ Methode</p> <p>post :- https://jeelsardhara.onrender.com/Api/Register</p> <p>get :- https://jeelsardhara.onrender.com/Api/Login</p> <p>post :- https://jeelsardhara.onrender.com/Api/OtpSent</p> <p>post :- https://jeelsardhara.onrender.com/Api/OtpVerify</p> <p>post :- https://jeelsardhara.onrender.com/Api/PassForgot</p> <br> <p>~ Require</p> <p>Register :- Name & Email & Password</p> <p>Login :- Email & Password</p> <p>OtpSent :- Email</p> <p>OtpVerify :- Email & Otp</p> <p>PassForgot :- Email & Password & confirmPassword</p> </body> </html>
